# comptoolbench

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  croissant.json  justfile  main.py  pyproject.toml
demo/: app.py  requirements.txt
huggingface/: README.md  test.jsonl  test.parquet
paper/: main.tex  references.bib  related_work_research.md
paper/tables/: leaderboard.csv  leaderboard.tex
results/cerebras_v2/figures/: table1_leaderboard.tex
results/cloud_v2_fast/figures/: table1_leaderboard.tex
results/cohere_v2/figures/: table1_leaderboard.tex
results/local_run_001/: run_remaining.sh
results/local_run_001/figures/: table1_leaderboard.tex
results/local_v2_200/figures/: table1_leaderboard.tex
results/local_v3/figures/: table1_leaderboard.tex
results/rerun_106tools/figures/: table1_leaderboard.tex
results/run_20260310_235411/figures/: table1_leaderboard.tex
scripts/: ablation_weights.py  bundle_arxiv.sh  check_progress.py  compute_bootstrap_ci.py  full_analysis.py  generate_figures_v4.py  generate_final_leaderboard.py  generate_paper_v3.py  launch_wave2.sh  merge_results.py  prepare_hf_dataset.py  prepare_human_validation.py  run_benchmark.py  run_l0_control.py  score_human_validation.py
src/comptoolbench/: __init__.py
src/comptoolbench/analysis/: __init__.py  (+5 more)
tests/: conftest.py  test_analysis.py  test_composition_engine.py  test_computation.py  test_external_services.py  test_file_data.py  test_matchers.py  test_metrics.py  test_remaining.py  test_scorers.py  test_state_management.py  test_statistical.py  test_task_generator.py  test_text_processing.py  test_tools_base.py
(+38 files in other folders)
