[project]
name = "comptoolbench"
version = "0.1.0"
description = "A benchmark for evaluating compositional tool-use generalization in LLMs"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Rony Rahmaan" }]
keywords = ["benchmark", "llm", "tool-use", "compositional", "evaluation"]
dependencies = [
    "litellm>=1.55",
    "pydantic>=2.10",
    "rich>=13.9",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=2.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "SciencePlots>=2.1",
    "scipy>=1.17.0",
    "gradio>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[project.scripts]
comptoolbench = "comptoolbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comptoolbench"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["comptoolbench"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra", "--timeout=300"]
markers = [
    "slow: marks tests as slow",
    "api: marks tests requiring API calls",
]
